# py.wtf

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE.txt  README.md  publish.py  publish.sh  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: autofixes.yml  frontend-tests.yml  indexer-tests.yml  update-index.yml
docs/: 404.html  CNAME  _spa.html  index.html
docs/_index/: .metadata  128autograder.json  144lab.json  1mllab.json  1secmail.json  2024-ass2-erbafiore-devops.json  2024-ass2-erbafiore.json  2024-assignment2-apirestpy.json  2024-assignment2-gruppoblvg-matteo.json  2024-test-ci-cd-ad-pipe.json  2112-generator-graphql-api.json  21blackjack-gui.json  2captcha-python.json  2ppy.json  3d-bin-packer.json  3d-registration.json  3lc.json  3to2.json  6estates-idp.json  770.json  9mice.json  a1-loggermanager.json  a1-sqladb-a1ptfl.json  a2gpipelines.json  a2wsgi.json  a3py.json  a5py.json  a9s-kit.json  aa-evescout.json  aa-miningtaxes.json  aa-orientation.json  aa-skillfarm.json  aa-student.json  aaaa-mymodule.json  aac-init.json  aact-openhands.json  aact.json  aamutils.json  aarc-entitlement.json  aas-middleware.json  (+41241 more)
docs/_next/data/EsqiBsOz1aJqwgcP13O4v/: index.json
docs/_next/data/FtY30Ib1rNpLd2NrEvbUX/: index.json
docs/_next/data/TFnKfAQamCZJc3OAOUXYJ/: index.json
docs/_next/data/jnl_CdTsce12KzgTvlnyr/: index.json
docs/_next/data/jugBx_KQ2w6h6C9JgIRyH/: index.json
docs/_next/data/wUShk1nq3hxqHr0r2WRmn/: index.json
docs/_next/static/EsqiBsOz1aJqwgcP13O4v/: _buildManifest.js
docs/_next/static/FtY30Ib1rNpLd2NrEvbUX/: _buildManifest.js
docs/_next/static/TFnKfAQamCZJc3OAOUXYJ/: _buildManifest.js
docs/_next/static/chunks/: 100-39ab6dbae8a4459f.js  100-eb70941fa7b4b446.js  306-904f01201f64c78c.js  349-243d330b1cd40f62.js  3b1baa31-2689a4308b9ab2dc.js  3b1baa31-f2cf3e714b21ee24.js  493-ba39a143a170340a.js  671-225802e4b3bb90fb.js  671-76aaacbb402eda70.js  671-a124af67406f9a90.js  793-e82da00da64cacbb.js  861-87e87cebc57b4bf2.js  898-0246768ee732e1f9.js  898-14b8caba0c26bbcf.js  898-c59882dd75f53bd9.js  99-e9a2bcb8d7c1b19e.js  framework-e4978a3670873750.js  main-27c70be6ea2bd446.js  main-28ab608c0f164e04.js  main-3180cefc29660cf3.js  main-49add6eece340f13.js  main-d639b89e1cbf8c49.js
docs/_next/static/chunks/pages/: _app-0854ec1ca2dc1362.js  _app-0b37eda6d9d5fafd.js  _app-1c1d06dc1736683f.js  _app-ef6bf785cf7ed005.js  _spa-0869bb89434cf146.js  _spa-7897b05f55d17ee5.js  _spa-899f92c952a59ea8.js  _spa-bbc9e63ce3d0bb0f.js  _spa-cee726110702524a.js  _spa-da80071a5b6d4ea0.js  index-0cace10521248a88.js  index-2aef1d17d1f8cf3b.js  index-3ab0b36f3bfe1223.js  index-6158487301aacaf7.js  index-d87bbe68f24a32d4.js  index-defe8e86efce2e8b.js
docs/_next/static/css/: 3f15832fd780249b.css
docs/_next/static/jnl_CdTsce12KzgTvlnyr/: _buildManifest.js
docs/_next/static/jugBx_KQ2w6h6C9JgIRyH/: _buildManifest.js
docs/_next/static/wUShk1nq3hxqHr0r2WRmn/: _buildManifest.js
py_wtf/: __about__.py  __main__.py  indexer.py  logging.py  repository.py  types.py
py_wtf/cli/: __init__.py
py_wtf/indexer/: __init__.py  annotation.py  documentation.py  file.py  pypi.py
scripts/: publish.py
test_fixtures/project-alpha/: project.json
test_fixtures/project-alpha/alpha/: __init__.py  core.py  foo.py
test_fixtures/project-beta/: project.json
test_fixtures/project-beta/beta/: __init__.py
tests/: conftest.py  test_repository.py  test_types.py
tests/indexer/: test_annotation.py  test_documentation.py  test_file.py  test_pypi.py
www/: .env.test  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  jest.config.js  jest.fixedjsdomenvironment.ts  jest.polyfills.js  next.config.js  package-lock.json  package.json  styled.d.ts  tsconfig.json  tsconfig.tsbuildinfo
www/__tests__/: class.test.tsx  exports.test.tsx  function.test.tsx  index.test.tsx  inner_class.test.tsx  module.test.tsx  myst.test.tsx  project.test.tsx
www/__tests__/index/: .metadata  project-alpha.json  project-beta.json
www/components/: Class.tsx  CondensedTable.tsx  Documentation.tsx  FetchPackage.tsx  FetchProject.tsx  Function.tsx  Header.tsx  Intersperse.tsx  Layout.tsx  ModuleListSidebar.tsx  MyST.tsx  Package.tsx  PageLayout.tsx  Variable.tsx  documentation.tsx  function.tsx  highlight.tsx  layout.tsx
www/components/Docs/: Class.tsx  Documentation.tsx  Function.tsx  Module.tsx  Package.tsx  Project.tsx  SymbolLinkTable.tsx  TypeAnnotation.tsx  Variable.tsx
www/components/SPA/: Loading.tsx  ModulePage.tsx  PackagePage.tsx  ProjectPage.tsx  SymbolPage.tsx
www/components/Sidebar/: ClassContents.tsx  ModuleContents.tsx  ModuleList.tsx  Sidebar.tsx  SidebarLink.tsx  SidebarLinkList.tsx
www/components/core/: Search.tsx
www/components/core/layout/: CondensedTable.tsx  ContentWithSidebar.tsx  FullPageBackground.tsx  frameHelpers.tsx  helpers.ts
www/components/core/navigation/: Link.tsx
www/components/core/theme/: theme.ts
www/components/core/typography/: Code.tsx  Heading.tsx  Text.tsx
www/hooks/: fetchModule.ts  fetchProject.ts  fetchSymbol.ts
www/lib/: docs.ts  docs_server.ts  searchDescriptor.ts  sorting.ts  spa.ts  url.ts
www/lib/test/: spa.tsx
www/pages/: 404.tsx  [...pkg].tsx  [pkg].tsx  _app.tsx  _spa.tsx  index.tsx
www/pages/[pkg]/: [mod].tsx
www/pages/[pkg]/[mod]/: [symbol].tsx
www/pages/posts/: first-post.tsx
www/public/: 404.html
www/styles/: global.css
www/types/: emotion.d.ts  styled.d.ts
