[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-wtf"
description = 'Documentation index'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [{ name = "Zsolt Dollenstein", email = "zsol.zsol@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "aiofiles==23.2.1",
  "appdirs==1.4.4",
  "cattrs==22.1.0",
  "click>=8.1.3",
  "google-cloud-bigquery>=3.23.1",
  "httpx==0.23.0",
  "keke>=0.1.4",
  "rich>=12.5.1",
  "libcst>=1.1.0",
  "trailrunner>=1.2.1",
  "packaging>=21",
  "rst-to-myst[sphinx]==0.4.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/zsol/py.wtf#readme"
Issues = "https://github.com/zsol/py.wtf/issues"
Source = "https://github.com/zsol/py.wtf"

[project.scripts]
py-wtf = "py_wtf.cli:py_wtf"

[tool.hatch.version]
path = "py_wtf/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.default]
type = "pip-compile"
pip-compile-hashes = true
pip-compile-args = ["--no-annotate", "--allow-unsafe"]
pip-compile-resolver = "uv"
dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-httpx",
  "types-aiofiles>=23.2.0",
  "types-appdirs==1.4.3",
  "ufmt >= 2.0.0",
  "pyright >= 1.1.348",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=py_wtf --cov=tests"
no-cov = "cov --no-cov"
check-types = "pyright"

[[tool.hatch.envs.test.matrix]]
python = ["312"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["py_wtf/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pyright]
include = ["py_wtf", "scripts"]
typeCheckingMode = "strict"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportMissingTypeStubs = "none"
