[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-wtf"
description = 'Documentation index'
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = []
authors = [{ name = "Zsolt Dollenstein", email = "zsol.zsol@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "aiofiles==24.1.0",
  "appdirs==1.4.4",
  "cattrs==24.1.2",
  "click>=8.1.3",
  "google-cloud-bigquery>=3.23.1",
  "httpx==0.27.2",
  "keke>=0.1.4",
  "libcst>=1.1.0",
  "networkx>=3.3",
  "packaging>=24.2",
  "rich>=13.9.4",
  "rst-to-myst[sphinx]==0.4.0",
  "stamina>=24.2.0",
  "trailrunner>=1.2.1",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/zsol/py.wtf#readme"
Issues = "https://github.com/zsol/py.wtf/issues"
Source = "https://github.com/zsol/py.wtf"

[project.scripts]
py-wtf = "py_wtf.cli:py_wtf"

[tool.hatch.version]
path = "py_wtf/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.env]
requires = ["hatch-pip-compile"]

[tool.hatch.envs.default]
type = "pip-compile"
pip-compile-hashes = true
pip-compile-args = ["--no-annotate", "--allow-unsafe"]
pip-compile-resolver = "uv"
python = "3.13"
dependencies = [
  "pyright >= 1.1.348",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-httpx",
  "pytest",
  "types-aiofiles>=24.1.0.20240626",
  "types-appdirs==1.4.3",
  "ufmt >= 2.0.0",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=py_wtf --cov=tests"
no-cov = "cov --no-cov"
check-types = "pyright"

[[tool.hatch.envs.test.matrix]]
python = ["313"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["py_wtf/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pyright]
include = ["py_wtf", "scripts"]
typeCheckingMode = "strict"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportMissingTypeStubs = "none"
